--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --verbose"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Kevin Mulier",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
@@ -19,6 +20,8 @@
     "nodemon": "^3.0.3"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "express-async-errors": "^3.1.1",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
