--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.5",
+    "mongoose-unique-validator": "^4.0.0",
     "nodemon": "^3.0.3"
   },
   "devDependencies": {
